--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-validation:2.3.5.RELEASE'
     compile 'org.apache.httpcomponents:httpclient:4.5.13'
     compile 'org.apache.commons:commons-lang3:3.11'
+    compile 'org.apache.commons:commons-math3:3.2'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
